--- a/views/partials/scriptPartials/contentLoadingScripts.handlebars
+++ b/views/partials/scriptPartials/contentLoadingScripts.handlebars
@@ -193,6 +193,14 @@ $(function(){
 
 {{/if}}
 
+    //todo:
+    //update all pages, including ones in the bg, except that will change the scroll position. so, stop storing the scroll position as the regular scrollTop
+    //thing; store it as the offset from the top of the latest post to be scrolled past. so a reference to that post (maybe just the id?) and the offset from the
+    //top of it. this way, content above it can be added or removed without throwing off the scrolling. this also means that there can be multiple instances of the
+    //same post in activePosts; it will have to have arrays of objects as values instead of single objects. and iterate over them and stuff.
+    //determing the top-of-the-screen post will have to be done as scrolling happens; if a post has been scrolled past, check if the next one is the new top, and so on
+
+
     activePosts = {}; //this is populated in append.infiniteScroll below, lets us find posts instantly by their id to add or delete comments and stuff.
 
     //loading notifications and comment stuff through websockets
@@ -260,6 +268,8 @@ $(function(){
         }
     })
 
+    //todo: post edited event
+
 //puts a container around tall posts/comments and makes lightbox show up when you click on their images
 //called for each post below in the append.infiniteScroll event after its images load and for each comment when its container is expanded
 function showMoreAndImageLightboxing(e) {
@@ -287,7 +297,7 @@ $(function(){
             e = $(e);
 
             var id = e.attr('data-post-id');
-            id && (activePosts[id] = e[0]); //todo: feed stack stuff
+            id && (activePosts[id] = e[0]);
             socket.emit('post(s) loaded', [id]);
 
             var imgs = e.children('.content').find('img');
