--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -235,6 +235,10 @@ h6 {
     text-align: center !important;
 }
 
+.text-thin {
+    font-weight: 300 !important;
+}
+
 .text-muted {
     color: $darkest-grey !important;
 }
