--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,7 +14,7 @@
                         <h4>Recommended</h4>
                         {{#neither userRecommendations popularCommunities}}
                             <hr />
-                            <p style="font-weight: 300;">
+                            <p class="text-thin">
                                 Out of suggestions - invite your friends!
                             </p>
                         {{else}}
