--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,8 +25,8 @@
   <meta name="twitter:description" content="{{#unless metadata.description}}A trust and community-based lightweight social network.{{else}}{{metadata.description}}{{/unless}}">
   <meta name="twitter:image" content="{{#unless metadata.image}}https://sweet.sh/android-chrome-512x512.png{{else}}{{metadata.image}}{{/unless}}">
 
-  <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
-  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.bubble.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/quill/1.3.6/quill.min.js"></script>
 
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
