--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -113,6 +113,30 @@
     </div>
   </div>
 
+  <div class="modal fade" id="boostManagerModal" tabindex="-1" role="dialog" aria-labelledby="boostManagerModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="boostManagerModalLabel">Manage boosts</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <p>
+                You have boosted this post in the following places:
+            </p>
+            <div class="compact-container">
+                <div id="boosts-list"></div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="button grey-button" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 {{> contentLoadingScripts }}
