--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -105,20 +105,20 @@
                             <i class="fas fa-retweet"></i>
                         </button>
                         <div class="dropdown-menu" aria-labelledby="post-boosting-dropdown">
-                            {{!todo: use a different url for this depending on whether this is the user/home feed or a community feed}}
-                            <button class="boost-post-userfeed dropdown-item" data-action="{{#if youBoosted}}unboost{{else}}boost{{/if}}" data-boost-url="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}{{#unless youBoosted}}/userfeed{{/unless}}">
-                                {{#if youBoosted}}
-                                    <span class="fa-layers fa-fw">
-                                        <i class="fas fa-retweet"></i>
-                                        <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
-                                    </span> Unboost post
-                                    {{!todo: add a button like 'unboost from all'}}
-                                {{else}}
+                            {{#if boostedIntoFeed}}
+                                <button disabled class="boost-post-userfeed dropdown-item">
+                                    <i class="fas fa-fw fa-user-circle"></i> You have boosted this post to your profile
+                                </button>
+                            {{else}}
+                                <button class="boost-post-userfeed dropdown-item" data-action="boost" data-boost-url="/createboost/{{this._id}}/userfeed">
                                     <i class="fas fa-fw fa-user-circle"></i> Boost post to your profile
-                                {{/if}}
-                            </button>
+                                </button>
+                            {{/if}}
                             <button type="button" class="dropdown-item boost-post-community" data-toggle="modal" data-target="#boostPostLocationModal" >
-                                <i class="fas fa-fw fa-leaf"></i> Boost post in a community
+                                <i class="fas fa-fw fa-leaf"></i> Boost post into a community
+                            </button>
+                            <button type="button" class="dropdown-item show-boost-manager" data-toggle="modal" data-target="#boostManagerModal" >
+                                <i class="fas fa-fw fa-retweet"></i> Manage boosts
                             </button>
                         </div>
                     </div>
