Fix two outstanding PR bugs
And a bonus third, actually.

 1. Unhandled promise rejection error when searching, as it doesn't
    always receive an .oldesttimestamp to look for. Fixed this by
    cathing and logging the error case.
 2. Failure to save a community when updating the image by vote, as it
    was experiencing a save-in-parallel error. Fixed this by saving the
    new image to the community synchronously, facilitating saving the
    community database entry within the current callback.
 3. Bonus third: creating a new community with no image errored, as
    request.files was null, so checking for request.files.imageUpload
    caused a crash. Fixed by putting a ward before it just checking that
    request.files is truthy.

--- a/views/search.handlebars
+++ b/views/search.handlebars
@@ -20,11 +20,10 @@
 </div>
 
 <script>
-
 $(function(){
   $('#resultsContainer').on('load.infiniteScroll', function (event, response, path) {
       var newlyLoadedStuff = $(response);
-      needPostsOlderThan = newlyLoadedStuff.find(".oldesttimestamp").html(); //the new oldest-result-loaded timestamp is provided by the server in this element
+      needPostsOlderThan = newlyLoadedStuff.find('.oldesttimestamp').html(); //the new oldest-result-loaded timestamp is provided by the server in this element
   })
 
   $('#resultsContainer').infiniteScroll({
@@ -41,16 +40,16 @@ $(function(){
     e.preventDefault();
     //-------------------------------------//
     $('#resultsContainer').infiniteScroll('destroy');
-    $('#resultsContainer').html("");
-    $('#searchTitle').text($("#searchQuery").val().trim() != "" ? $("#searchQuery").val() : "Search");
+    $('#resultsContainer').html('');
+    $('#searchTitle').text($('#searchQuery').val().trim() != '' ? $('#searchQuery').val() : 'Search');
     historyData = {
-      url: '/showsearch/' + $("#searchQuery").val(),
-      title: $("#searchQuery").val().trim() != "" ? $("#searchQuery").val() : "Search"
+      url: '/showsearch/' + $('#searchQuery').val(),
+      title: $('#searchQuery').val().trim() != '' ? $('#searchQuery').val() : 'Search'
     }
-    history.pushState(historyData, 'sweet', '/search/' + $("#searchQuery").val());
+    history.pushState(historyData, 'sweet', '/search/' + $('#searchQuery').val());
     $('#resultsContainer').infiniteScroll({
       path: function() {
-        return '/showsearch/' + $("#searchQuery").val() + '/' + needPostsOlderThan;
+        return '/showsearch/' + $('#searchQuery').val() + '/' + needPostsOlderThan;
       },
       append: '.content-box',
       prefill: true,
@@ -61,7 +60,7 @@ $(function(){
 
   window.onpopstate = function(history) {
     $('#resultsContainer').infiniteScroll('destroy');
-    $('#resultsContainer').html("");
+    $('#resultsContainer').html('');
     $('#searchTitle').text(history.state.title);
     $('#resultsContainer').infiniteScroll({
       path: function() {
