Correctly return oldesttimestamp as a class, not an ID

--- a/views/partials/searchresults.handlebars
+++ b/views/partials/searchresults.handlebars
@@ -27,7 +27,7 @@
       </div>
     </div>
     {{#if @last}}
-      <div id="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
+      <div class="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
     {{/if}}
   </div>
   {{/each}}
